--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@vue/cli-plugin-babel": "~5.0.6",
     "@vue/cli-plugin-router": "~5.0.6",
     "@vue/cli-plugin-vuex": "~5.0.6",
