--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@coreui/utils": "^1.3.1",
     "@coreui/vue": "^4.1.0",
     "@coreui/vue-chartjs": "2.0.0",
+    "@vuelidate/core": "^2.0.0-alpha.42",
+    "@vuelidate/validators": "^2.0.0-alpha.30",
     "axios": "^0.27.2",
     "core-js": "^3.23.3",
     "lodash": "^4.17.21",
@@ -35,6 +37,7 @@
     "@vue/cli-plugin-router": "~5.0.6",
     "@vue/cli-plugin-vuex": "~5.0.6",
     "@vue/cli-service": "~5.0.6",
+    "dotenv-webpack": "^8.0.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2"
   }
