--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@coreui/vue-chartjs": "2.0.0",
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
+    "@vuepic/vue-datepicker": "^3.3.1",
     "axios": "^0.27.2",
     "core-js": "^3.23.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-lodash": "^2.1.2",
@@ -32,7 +34,6 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.3.0",
     "@vue/cli-plugin-babel": "~5.0.6",
     "@vue/cli-plugin-router": "~5.0.6",
     "@vue/cli-plugin-vuex": "~5.0.6",
