--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-sweetalert2": "^5.0.5",
     "vue3-telegram-login": "^0.0.4",
     "vuejs-paginate-next": "^1.0.2",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.6",
